fixed fade flickering and wrong color on expansion

--- a/client/src/components/Marky.module.css
+++ b/client/src/components/Marky.module.css
@@ -26,7 +26,6 @@
   height: 100%;
   min-width: 16%;
   z-index: 80;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0), var(--off-white));
 
   pointer-events: none;
 }
